# GameEngineLab

./: .gitignore  Cargo.toml  DinoGrr.rar  GameEngineLab.sln  GameEngineLab.slnx  LaboratorioDeVideojuegos.sln  PLAYGROUND.rar  README.md
BattlePentagram/: Direction.cs  (+3 more)
engine_core/: Cargo.toml
engine_core/src/: lib.rs
engine_core/src/background/: mod.rs  parallax_background.rs  parallax_layer.rs
engine_core/src/builders/: mod.rs
engine_core/src/builders/rigid_bodies/: circle_rigid_body_builder.rs  mod.rs  rectangle_rigid_body_builder.rs  solid_body_build.rs  spring_builder.rs  triangle_rigid_body_builder.rs
engine_core/src/builders/soft_bodies/: mod.rs  soft_rectangle_builder.rs  spring_builder.rs
engine_core/src/character/: character_2d.rs
engine_core/src/collision/: circle_collision_mesh.rs  collision_mesh.rs  evaluator.rs  mod.rs  rectangle_collision_mesh.rs
engine_core/src/collision_body/: circle_collision_body.rs  collision_body.rs  mod.rs
engine_core/src/drawing/: textures.rs
engine_core/src/files/: file_asset.rs  mod.rs  path_resource.rs
engine_core/src/maps/: map_2d_json_serializer.rs  map_2d_loader.rs  map_2d_loader_plugin.rs  map_2d_model.rs  map_2d_resource.rs  map_2d_txt_serializer.rs  map_json.rs  mod.rs  tile_size.rs
engine_core/src/online/p2p/: cert.rs  crypto.rs  mod.rs  node.rs  packet.rs
engine_core/src/parsers/maps_parsers/: map_2d_loader.rs  map_json.rs  mod.rs
engine_core/src/physics/: box_object.rs  mod.rs  physics_object.rs  physics_world.rs  verlet_point.rs
engine_core/src/physics/bodies/: mod.rs  rigid_body_2d.rs  solid_body.rs
engine_core/src/physics/collisions_2d/: mod.rs  sat_collision.rs  simple_collision_body.rs
engine_core/src/rendering/: mod.rs  render_mesh.rs  world_renderer.rs
engine_core/src/rigid_body/: rigid_body.rs
engine_core/src/spring/: spring.rs
engine_core/src/textures/: mod.rs  sprite2d.rs  texture.rs
engine_core/src/tilemap/: mod.rs  tile.rs  tilemap.rs  tileset.rs  utilities.rs
engine_core/src/utilities/: wrappers.rs
legacy/engine_core/: Cargo.toml
legacy/engine_core/src/: lib.rs
legacy/pacman-rs/: Cargo.toml
legacy/pacman-rs/data/: map.json
legacy/pacman-rs/src/: grayscale_filter.rs  main.rs
pacman-rs/: Cargo.toml
pacman-rs/data/: map.json
pacman-rs/src/: asset_editor.rs  clay_filter.rs  game.rs  main.rs  map.txt  options_menu.rs  settings.rs
pacman-rs/src/asset_editor/: asset_editor.rs  group_selector.rs  mod.rs  models.rs  ui.rs
pacman-rs/src/ghosts/: ghost.rs  ghost_spawner.rs  mod.rs
pacman-rs/src/map_editor/: editor.rs  group_selector.rs  storage.rs
pacman-rs/src/pacman/: controller.rs  mod.rs  movement.rs  pacman.rs
(+431 files in other folders)
