[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.13.2", features = ["jpeg"] }
raylib = "5.5.1"
serde = "1.0.228"
serde_json = "1.0.148"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
