[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
js-sys = "0.3.83"
raylib = "5.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["Window", "Storage"] }
