[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
bincode = "1.3.3"
js-sys = "0.3.83"
rand = "0.8.5"
raylib = "5.5.1"
rsa = "0.9.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["Window", "Storage"] }
