[package]
name = "pacman-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_core = { path = "../engine_core" }
bevy = { version = "0.17.3", features = ["jpeg"] }
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
