[package]
name = "engine_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
js-sys = "0.3.83"
quinn = "0.11.2"
rcgen = "0.13.1"
rustls = { version = "0.23.12", features = ["ring"] }
tokio = { version = "1.39.2", features = ["full"] }
raylib = "5.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["Window", "Storage"] }
