[package]
name = "pacman-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_core = { path = "../engine_core" }
raylib = "5.5.1"
image = "0.24"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
